force-app/main/default/objects/Pipeline_Stage__mdt/Pipeline_Stage__mdt.object-meta.xml
<CustomObject>
    <description>Production-grade pipeline stage configuration for Lead Tracker. Each record defines one stage column — its display, sequencing, SLA, behavioral flags, and card badge JSON. No pipeline stages are hardcoded anywhere in the application.</description>
    <label>Pipeline Stage</label>
    <pluralLabel>Pipeline Stages</pluralLabel>
</CustomObject>