force-app/main/default/objects/Pipeline_Stage__mdt/fields/Card_Badge_Config__c.field-meta.xml
<CustomField>
    <fullName>Card_Badge_Config__c</fullName>
    <description>JSON configuration controlling what data appears as a badge on lead cards in this pipeline stage. Schema: {"field": "API_Name__c", "label": "Display Label", "type": "score|date|text"}. The LWC lead card reads this to render stage-appropriate badges without code changes.</description>
    <label>Card Badge Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>