force-app/main/default/objects/Pipeline_Stage__mdt/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Hex color code applied to the stage column header and lead health indicator. Applied as a CSS custom property so it works in both light and dark density modes. Must be a valid 6-digit hex including the # prefix (e.g., #0070D2).</description>
    <helpText>Column accent color in #RRGGBB hex format. Example: #0070D2</helpText>
    <label>Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>