force-app/main/default/objects/Pipeline_Stage__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>SLDS icon API name displayed in the stage column header. Format: category:name (e.g., standard:lead, utility:call, utility:success). See https://www.lightningdesignsystem.com/icons/ for the full icon catalog.</description>
    <label>Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>