force-app/main/default/objects/Pipeline_Stage__mdt/fields/Is_Won__c.field-meta.xml
<CustomField>
    <fullName>Is_Won__c</fullName>
    <description>Marks this as a positive outcome stage. Won stages contribute to conversion rate metrics, trigger success celebrations in the UI, and can initiate downstream workflows.</description>
    <defaultValue>false</defaultValue>
    <label>Is Won</label>
    <type>Checkbox</type>
</CustomField>