force-app/main/default/objects/Pipeline_Stage__mdt/fields/Pipeline_Type__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Type__c</fullName>
    <description>Groups this stage into a named pipeline. The Application_Config__mdt.Default_Pipeline__c value controls which pipeline the board loads by default. Multiple pipeline types can coexist in a single org (e.g., Nonprofit, Enterprise, SMB).</description>
    <label>Pipeline Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>