force-app/main/default/objects/Pipeline_Stage__mdt/fields/Requires_Activity__c.field-meta.xml
<CustomField>
    <fullName>Requires_Activity__c</fullName>
    <description>When true, leads in this stage that have no activity within SLA_Days__c days are flagged as stale (Is_Stale__c = true) and shown with a warning indicator on the pipeline board.</description>
    <defaultValue>false</defaultValue>
    <label>Requires Activity</label>
    <type>Checkbox</type>
</CustomField>