force-app/main/default/objects/Pipeline_Stage__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Left-to-right column order on the pipeline board within a Pipeline_Type__c. Lower numbers appear first. Use increments of 10 to allow future insertions without resequencing.</description>
    <helpText>Column position (1–999). Use multiples of 10 to leave room for future stages.</helpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>