force-app/main/default/objects/Pipeline_Stage__mdt/fields/SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Days__c</fullName>
    <description>Number of days a lead may remain in this stage without activity before being flagged as stale. Only enforced when Requires_Activity__c is true. Set 0 for closed stages to disable SLA monitoring.</description>
    <helpText>Days allowed without activity before this lead is flagged as stale. Works with Requires Activity. Set to 0 for closed stages.</helpText>
    <label>SLA Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>