force-app/main/default/objects/Pipeline_Stage__mdt/fields/Stage_Key__c.field-meta.xml
<CustomField>
    <fullName>Stage_Key__c</fullName>
    <description>Machine-readable unique key for this stage. Stored in Lead.Current_Stage__c. Used as the grouping key on the pipeline board. Must be unique within a Pipeline_Type__c. Use snake_case (e.g., initial_inquiry).</description>
    <helpText>Unique identifier for this stage (snake_case). Stored on the Lead record. Example: initial_inquiry</helpText>
    <label>Stage Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>