force-app/main/default/objects/Pipeline_Stage__mdt/fields/Stage_Label__c.field-meta.xml
<CustomField>
    <fullName>Stage_Label__c</fullName>
    <description>Human-readable display name for this stage shown as the column header on the pipeline board and in reports.</description>
    <label>Stage Label</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>